--- a/exercicio6/styles.css
+++ b/exercicio6/styles.css
@@ -1,4 +1,83 @@
 
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #333;
+  padding: 10px 20px;
+  color: white;
+  position: relative;
+}
+
+.logo {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+
+.nav-links {
+  display: flex;
+  list-style: none;
+  gap: 20px;
+}
+
+.nav-links a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+
+#menu-toggle {
+  display: none;
+}
+
+.hamburger {
+  display: none;
+}
+
+
+@media (max-width: 600px) {
+  .hamburger {
+    display: block;
+    font-size: 26px;
+    cursor: pointer;
+    user-select: none;
+    z-index: 20;
+  }
+
+  #menu-toggle {
+    display: block;
+    position: absolute;
+    top: 15px;
+    right: 20px;
+    opacity: 0;
+    height: 30px;
+    width: 30px;
+    cursor: pointer;
+    z-index: 15;
+  }
+
+  
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    right: 20px;
+    background-color: #444;
+    padding: 10px;
+    border-radius: 8px;
+    width: 150px;
+    z-index: 10;
+  }
+
+  #menu-toggle:checked ~ .nav-links {
+    display: flex;
+  }
+}
+
+
 .galeria-container {
   display: flex;
   justify-content: center;
@@ -7,14 +86,12 @@
   flex-wrap: wrap;
 }
 
-
 .galeria-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
   max-width: 1200px;
 }
-
 
 .item {
   background-color: #f5f5f5;
@@ -29,20 +106,44 @@
   border-radius: 8px;
 }
 
+
 @media (max-width: 1000px) {
   .galeria-grid {
-    grid-template-columns: repeat(3, 1fr); 
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
 @media (max-width: 700px) {
   .galeria-grid {
-    grid-template-columns: repeat(2, 1fr); 
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media (max-width: 500px) {
   .galeria-grid {
-    grid-template-columns: 1fr; 
+    grid-template-columns: 1fr;
+  }
+}
+
+.logo {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+
+@media (max-width: 600px) {
+  .logo {
+    font-size: 20px;
+    font-weight: bold;
+    color: transparent; 
+    position: relative;
+  }
+
+  .logo::after {
+    content: "TW Burguer";
+    color: rgb(17, 17, 17);
+    position: absolute;
+    left: 0;
+    top: 0;
   }
 }
